# hitster

./: README.md  dev.env  pyproject.toml
src/routers/: health.py  songs.py
src/server/: main.py
src/services/spotify/: conn.py  downloader.py
