[project]
name = "hitster"
version = "0.1.0"
description = "The back-end FastAPI app to play music from QR codes using Spotify player"
authors = [
    {name = "Lukasz Ch", email = "lukchm94@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "spotipy>=2.24.0",
    "python-jose>=3.3.0",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "pydantic>=2.0.0",
    "fastapi>=0.105.0",
    "uvicorn>=0.25.0",
    "sqlalchemy>=2.0.0",
    "mysql-connector-python>=4.0.0",
    "pytest>=7.2.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=3.2.0",
    "httpx>=0.23.2",
    "psycopg2-binary>=2.9.3",
    "pytest-cov>=5.0.0",
    "coverage>=7.5.3",
    "fastapi-apscheduler>=0.0.5",
    "requests>=2.26.0",
    "spotipy>=2.24.0"
]


[tool.pdm.scripts]
check_code_format = "black --check src/"
format_code = "black src/"
dev = "uvicorn src.server.main:app --reload --env-file dev.env"
prod = "docker-compose up --force-recreate"
tests = "pytest --disable-warnings"
logs_tests = "pytest -s"
test_coverage = "pytest --cov=grids-service-python --cov-report=html tests/"
cov_test = "coverage run -m pytest"
coverage_report = "coverage report --fail-under=80"
generate_html_report = "coverage html"
